# raytracing

./: CMakeLists.txt
images/: 05_normal_gradient_sphere_with_AA.ppm  06_gamma_corrected_grey_sphere.ppm  07_lambertian_and_metal_spheres.ppm  08_fuzzy_lambertian_and_metal_spheres.ppm  09_dielectric_lambertian_and_metal_spheres.ppm  10_glass_bubble_lambertian_and_metal_spheres.ppm  11_spheres_with_focus_distance.ppm
src/: CMakeLists.txt  Camera.h  Color.cpp  Color.h  PpmDrawer.cpp  PpmDrawer.h  Ray.cpp  Ray.h  Utils.h  Vec3.cpp  Vec3.h  main.cpp
src/materials/: Dielectric.h  Lambertian.h  Material.h  Metal.h
src/shapes/: Shape.h  ShapeList.h  Sphere.h
